--- a/style.css
+++ b/style.css
@@ -70,8 +70,52 @@ main{
  margin-right: 30px;
 }
 
+.blog-heading {
+  border-bottom: 8px solid #f7f7f7;
+  text-align: center;
+  line-height: 0.6;
+}
+
+.blog-box{
+  padding-top: 50px;
+}
+
+.blog-item{
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #f7f7f7;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.blog-image {
+  height: 180px;
+}
+
+.blog-text{
+  padding: 25px 0 0 30px;
+}
+
+.blog-text-heading{
+  padding-bottom: 15px;
+}
+
+.blog-date {
+  font-size: 12px;
+  display: inline-block;
+}
+
+.category {
+  display: inline-block;
+  padding: 5px 8px;
+  background-color: #acabad;
+  border-radius: 3px;
+  color: #fff;
+  font-size: 11px;
+}
+
 .sidebar {
-  
+  width: 230px;
 }
 
 footer {
